--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Shrikhand&display=swap');
 
 #content{
     max-width: 1600px;
@@ -12,18 +13,42 @@ nav a{
     font-family: Josefin Sans, Arial, sans-serif;
     padding: 35px; 
 }
+nav {
+    display: flex;
+    justify-content: space-around; 
+}
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
 .home-title{
-    color:#473335;
+    color:white;
     font-family: Josefin Sans, Arial, sans-serif;
     font-size: 2em;
     margin-top: 10px;
 }
 h4{
-    color:#473335;
+    color: white;
 }
 #hero-msg h1, #hero-msg h4{
     text-align: center;
-    font-family: Josefin Sans, Arial, sans-serif;
+    font-family: Shrikhand, Arial, sans-serif;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1; 
+}
+#hero-msg { 
+    grid-column: 2/3; 
+    grid-row: 1/2;
+    margin-top: 100px 
 }
 .button-box{
     text-align: center;
@@ -33,8 +58,36 @@ main section{
     font-family: Raleway, Arial, sans-serif;
 
 }
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr)
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+    margin: 200px 0; 
+}
+.camping-card { 
+    grid-column: 5/7;
+    grid-row: 2/3;
+    margin: 200px 0; 
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+    margin: 200px 0; 
+}
 #background{
     height: 725px; 
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8; 
+    box-shadow: 5px 5px 10px #6f7364;
+    width: 100% 
+
 }
 body{
     background-color: white; 
@@ -45,6 +98,8 @@ body{
 }
 header{
     background-color: #607466;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 nav a:hover{ 
     background-color: #473335;
@@ -71,6 +126,9 @@ nav a:hover{
     background-color: #607466;
     line-height: 1.5em;
     padding: 35px; 
+    grid-column: 6/10;
+    grid-row: 6/7; 
+    box-shadow: 5px 5px 10px #6f7364; 
 }
 .msg h2{
     color:white;
@@ -85,6 +143,9 @@ footer{
     background-color: #e9fae3;
     padding: 25px 50px;
     margin-top: 200px; 
+    display: flex; 
+    justify-content: space-around;
+    align-items: center; 
 }
 footer h3{
     color: black; 
@@ -117,12 +178,59 @@ h2 {
 footer .social img{
     padding-top: 15px;
 }
-.rivers-card, .camping-card, .rapids-card {
-    margin: 200px 0; 
-}
 .card-img { 
-    border: 10px solid #607466; 
+    border: 10px solid #607466;
+    transition: transform .5s; 
+    box-shadow: 5px 5px 10px #6f7364 
+}
+.card-img:hover {
+    opacity: .6; 
+    transform: scale(1.1); 
 }
 main section img { 
     box-sizing: border-box;
+}
+.card-img, .mountains {
+    width: 100%; 
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
