--- a/breakfast/styles/style.css
+++ b/breakfast/styles/style.css
@@ -74,7 +74,7 @@ body{
 .menu{
     color: black; 
     grid-column: 6/10; 
-    grid-row: 4/7; 
+    grid-row: 2/3; 
     background-color: #D68C45;
     font-family: Josefin Sans;
 }
@@ -227,6 +227,7 @@ footer .social img{
     width: 50%; 
     grid-column: 2/8;
     grid-row: 2/9; 
+    margin-bottom: 40px;
 }
 * {box-sizing:border-box}
 
@@ -315,4 +316,86 @@ footer .social img{
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+form {
+    /* Center the form on the page */
+    grid-column: 7/10;
+    grid-row: 5/8;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 1em;
+
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  form li + li {
+    margin-top: 1em;
+  }
+  
+  label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+  }
+  
+  input,
+  textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 1em sans-serif;
+  
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* Match form field borders */
+    border: 1px solid #999;
+  }
+  
+  input:focus,
+  textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #000;
+  }
+  
+  textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+  
+    /* Provide space to type some text */
+    height: 5em;
+  }
+  
+  .button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+  }
+  
+  button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: .5em;
+  }
+
+  #feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;       
+}
+.moveDown {
+    margin-top: 3em;
 }
